--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,10 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -68,6 +71,7 @@
             <artifactId>spring-restdocs-mockmvc</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
